--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="colorFormerPrimaryDark">#fff17a0a</color>
     <color name="onebigshop_standard_grey">#C9CACA</color>
     <color name="oneBigShop_grey_2">#6A6A6A</color>
+    <color name="colorBlack">#000000</color>
 </resources>
